WIP: Map json deser not finding deserializer (StoredValueTests => validate_CLValueMap_Mapping_with_string_tuple1_i32 (line 594)